# swam

./: .gitignore  CHANGELOG.md  LICENSE  README.md  aaencoder.py  app.css  app.css.map  app.js  app.scss  index.html  pyproject.toml  runserver  setup.sh  swam.conf  swam.py  update.sh
apps/docs/developer/: app.js  app.json  app_init.js  includes.css  includes.js  menus.js  override.scss  templates.js
apps/examples/mobile/: app.js  app.json  includes.css
apps/examples/portal/: app.js  app.json  app_init.js  includes.css  includes.js  override.scss  templates.js
apps/portal/: app.js  app.json  app_init.js  includes.css  includes.js  settings.scss  templates.js
js/: mustache.js  swam.js
plugins/: crypto.js  datepicker.css  datepicker.js  html2canvas.js  moment.js  mustache.js
plugins/bootstrap/: bootstrap5-icons.css  bootstrap5.css  bootstrap5.js  tags.js
plugins/charts/: chart.js  include.js  plugins.js  statusline.css  statusline.js  view.js
plugins/icons/: README.md
plugins/maps/: include.js  maps.js
plugins/portal_ext/: app.js  include.js  namespace.js  templates.js
plugins/portal_ext/settings/: admin_global.js  edit_config.html
plugins/preview/: image.js  include.js  pdf.js
plugins/swam/: license.js  swam.js  swam_all.js  swam_lite.js  templates.js  util.js
plugins/swam/app/: app.js  page.js  (+1 more)
plugins/wiki/: easymde.min.css  include.css  include.js  milkdown.module.js  templates.js
scss/: _index.scss  app.scss  misc.scss  pages.scss  twitter_bootstrap.css  utils.scss
views/: dialog.html  home.html  left_menu.html  loading.html  topbar.html
(+338 files in other folders)
